# wildlings

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECT.md  Dockerfile  PLAN.md  README.md  SPEC.md  docker-compose.yml  files-to-prompt.sh  pyproject.toml  wildlings-unraid-template.xml
.github/workflows/: ci.yml  docker.yml
api/: __init__.py  alembic.ini  db.py  main.py  pyproject.toml  schemas.py  settings.py  time.py
api/migrations/: env.py
api/migrations/versions/: 0001_init_sync_tables.py
api/models/: __init__.py  log.py  sync_op.py
api/routes/: sync.py
api/tests/: conftest.py  test_db.py  test_docker_compose.py  test_dockerfile_cmd.py  test_settings.py  test_static.py  test_sync.py
app/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
app/src/: app.tsx  main.tsx  routeTree.gen.ts  router.tsx  styles.css
app/src/components/: LogsManager.tsx  StatsSummary.tsx  SyncStatus.tsx  TimerControls.tsx
app/src/db/: db.ts  stats.ts  sync.ts  syncSchemas.ts
app/src/hooks/: useLogs.ts  useStats.ts  useSync.ts  useTimer.ts
app/src/lib/: datetime.ts
app/src/routes/: __root.tsx  index.tsx  logs.tsx  settings.tsx
app/tests/: appRouterSingleton.test.tsx  appRoutes.test.tsx  datetime.test.ts  db.test.ts  logs.test.ts  logsManager.test.tsx  postcssConfig.test.ts  pwaConfig.test.ts  stats.test.ts  statsSummary.test.tsx  stylesCss.test.ts  sync.test.ts  syncContract.test.ts  syncStatus.test.tsx  timerControls.test.tsx  useLogs.test.ts  useStats.test.ts  useSync.test.ts  useTimer.test.ts
