[project]
name = "wildlings-api"
version = "0.1.0"
description = "Wildlings FastAPI backend."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "sqlmodel>=0.0.22",
  "pydantic>=2.7.0",
  "uvicorn>=0.30.0",
  "alembic>=1.13.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]
